--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,30 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.country-list__item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.country-list__name {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.country-list__flags {
+  margin-right: 10px;
+}
